Revision history for Pod-To-PDF

{{$NEXT}}

0.0.7  2022-03-01T12:21:34+13:00
    - Fix continued code blocks
    - Set default page size to letter (612x792 pt)

0.0.6  2022-02-28T16:34:43+13:00
    - Fix footnote positioning and pagination logic

0.0.5  2022-02-28T09:52:23+13:00
    - Add metadata method.
    - Store =TITLE =AUTHOR etc in PDF metadata.
    - Fix indentation of item lists
    - Inherit width and height attributes from surface

0.0.4  2022-02-27T06:13:12+13:00
    - Fix internal links
    - Warn, don't abort if :@fonts file is missing

0.0.3  2022-02-26T15:39:14+13:00
    - Fix rendering of =SUBTITLE and other uppercased headers
    - Parse external links to ensure that they're legal
    - Fix internal destination name generation

0.0.2  2022-02-25T13:17:10+13:00
    - Fix testing under zef install
    - Minor refactor of line-breaking

0.0.1  2022-02-25T12:22:35+13:00
    - Initial version