@@ -1,0 +1,74 @@
+use v6;
+
+use Test;
+use Pod::To::PDF;
+use Cairo;
+
+plan 2;
+
+mkdir "tmp";
+my $pdf-file = "tmp/subsections.pdf";
+my Cairo::Surface $pdf = pod2pdf($=pod, :$pdf-file);
+lives-ok {$pdf.finish}
+
+my $xml = q{<Document>
+  <Sect>
+    <H>
+      Outer
+    </H>
+    <P>
+      This is an outer paragraph
+    </P>
+    <Sect>
+      <H>
+        Inner1
+      </H>
+      <P>
+        This is the ﬁrst inner paragraph
+      </P>
+    </Sect>
+    <Sect>
+      <H>
+        Inner2
+      </H>
+      <P>
+        This is the second inner paragraph
+      </P>
+    </Sect>
+  </Sect>
+</Document>
+};
+
+try require ::('PDF::Tags::Reader');
+if ::('PDF::Tags::Reader') ~~ Failure {
+    skip-rest "PDF::Tags::Reader is required to perform structural PDF testing";
+    exit 0;
+}
+
+subtest 'document structure', {
+    plan 1;
+    # PDF::Class is an indirect dependency of PDF::Tags::Reader
+    require ::('PDF::Class');
+    my $pdf  = ::('PDF::Class').open: "tmp/subsections.pdf";
+    my $tags = ::('PDF::Tags::Reader').read: :$pdf;
+    is $tags[0].Str(:omit<Span>), $xml, 'PDF Structure is correct';
+}
+
+=begin pod
+=begin Outer
+
+This is an outer paragraph
+
+=begin Inner1
+
+This is the first inner paragraph
+
+=end Inner1
+
+    =begin Inner2
+
+    This is the second inner paragraph
+
+    =end Inner2
+=end Outer
+=end pod
